# Problems

./: CC_KSUB.cpp  SegmentTrees.cpp  TwoSets.java  appledivision.cpp  binary_tree_by_array.cpp  codechef_XORED.cpp  codeforces_1556_B.cpp  codeforces_1557.cpp  codeforces_1569_A.cpp  cp_template.sublime-snippet  credit_suissue_prob2.cpp  credit_suissue_prob2.py  cses_NumberSpiral.cpp  cses_TwoKnights.cpp  cses_bitstrings.cpp  cses_chessboardandqueens.cpp  cses_graycode.cpp  cses_increasing_array.cpp  cses_palindromereorder.cpp  cses_permutations.cpp  cses_trailingzeros.cpp  cses_twosets.cpp  cses_weired_algorithm.cpp  cses_weired_algorithm.java  electrovert_dijkstra.cpp  electrovert_string_tc.cpp  kikstart_21_D.cpp  kikstart_21_D_2.cpp  kikstart_21_g_1.cpp  leetcode_greycode.cpp  longest_increasing_sequence.cpp  oop_revision.cpp  outputf.in  spoj_ADATRIP.cpp  temp.c  test.txt  triple_XOR.cpp
C++/: codechef_ANDORUNI.cpp  codechef_ANDSUBAR.cpp  codechef_BSXOR.cpp  codechef_DIGREM.cpp  codechef_MAKEABEQUAL.cpp  codechef_MEXOR.cpp  codechef_MIXTURES.cpp  codechef_SNSOCIAL.cpp  codeforces_1556.cpp  codeforces_1569_B.cpp  codeforces_1629_A.cpp  codeforces_1629_B.cpp  codejam.cpp  cses_chessboardandqueens.cpp  cses_coinpiles.cpp  cses_gridpaths.cpp  graph.cpp  hello.cpp  (+7 more)
C++/PracticeStuff/TrainTicketBooking/Client/: CMakeLists.txt
C++/PracticeStuff/TrainTicketBooking/Client/src/: main.cpp
C++/PracticeStuff/TrainTicketBooking/Server/: CMakeLists.txt
C++/PracticeStuff/TrainTicketBooking/Server/src/: main.cpp
C++/PracticeStuff/TrainTicketBooking/Socket/: CMakeLists.txt
C++/PracticeStuff/TrainTicketBooking/Socket/include/: SocketWrapper.h
C++/PracticeStuff/TrainTicketBooking/Socket/src/: SocketWrapper.cpp
C++/TrainBooking/Server/: CMakeLists.txt  main.cpp
C++/TrainBooking/Server/include/: ClientHandler.h  server.h
C++/TrainBooking/Server/src/: ClientHandler.cpp  server.cpp
(+109 files in other folders)
